--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "4.28",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.6",
+    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
@@ -22,6 +23,7 @@
     "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.34",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
